# src/app.ts
@@ -1,15 +1,12 @@
 import express, { Express } from 'express';
-import swaggerUi from 'swagger-ui-express';
-import { swaggerSpec } from './docs/swagger';
-import { authRouter } from './modules/auth/auth.router';
-import { slotsRouter } from './modules/slots/slots.router';
-import { usersRouter } from './modules/users/users.router';
 import cookieParser from 'cookie-parser';
 import { errorMiddleware } from './middlewares/error.middleware';
 import { corsMiddleware } from './middlewares/cors.middleware';
 import pinoHttp from 'pino-http';
 import { logger } from './utils/logger';
 import { env } from './config/env';
+import { rateLimitMiddleware } from './middlewares/rate-limit.middleware';
+import { registerRoutes } from './routes';
 
 export function createApp(): Express {
   const app: Express = express();
@@ -20,26 +17,12 @@ export function createApp(): Express {
       autoLogging: env.httpLogsEnabled,
     }),
   );
-  app.use(express.json());
+  app.use(rateLimitMiddleware);
+  app.use(express.json({ limit: '32kb' }));
   app.use(cookieParser());
   app.use(corsMiddleware);
 
-  app.get('/', (req, res) => {
-    res.status(200).json({ message: 'Hello TS Express' });
-  });
-
-  app.get('/docs/openapi.json', (req, res) => {
-    res.status(200).json(swaggerSpec);
-  });
-
-  app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerSpec));
-  app.use('/auth', authRouter);
-  app.use('/users', usersRouter);
-  app.use('/slots', slotsRouter);
-
-  app.all('/{*splat}', (req, res) => {
-    res.status(404).json({ message: 'Route not found' });
-  });
+  registerRoutes(app);
 
   app.use(errorMiddleware);
 
