# src/modules/slots/slots.controller.ts
@@ -1,25 +1,48 @@
 import { Request, Response } from 'express';
 import { slotsService } from './slots.service';
-import { SlotDto } from './slots.dto';
+import { ContractorSlotListDto, SlotDto, SlotListDto } from './slots.dto';
 import { Slot } from './slots.types';
 import { User } from '../users/users.types';
 import { getUser } from '../users/users.helpers';
 import type { AuthenticatedRequest } from '../auth/auth.request.types';
+import { GetSlotsQueryDto, PatchSlotDto } from './slots.validation';
 
 export const slotsController = {
   async getSlots(req: Request, res: Response): Promise<void> {
-    const slots: SlotDto[] = await slotsService.getSlots();
-    res.status(200).json({ slots: slots });
+    const filters: GetSlotsQueryDto = req.query as unknown as GetSlotsQueryDto;
+    const response: SlotListDto = await slotsService.getSlots(filters);
+    res.status(200).json(response);
+  },
+  async getSlotsByContractorId(req: Request<{ contractorId: string }>, res: Response): Promise<void> {
+    const contractorId: string = req.params.contractorId;
+    const filters: GetSlotsQueryDto = req.query as unknown as GetSlotsQueryDto;
+    const response: ContractorSlotListDto = await slotsService.getSlotsByContractorId({
+      ...filters,
+      contractorId,
+    });
+    res.status(200).json(response);
   },
   async createSlot(req: AuthenticatedRequest, res: Response): Promise<void> {
     const actor: User = getUser(req);
     const slot: Slot = await slotsService.createSlot(actor, req.body);
-    res.status(201).json({ slot: slot });
+    res.status(201).json({ slot });
   },
-  async deleteSlot(req: AuthenticatedRequest, res: Response): Promise<void> {
+  async deleteSlot(req: AuthenticatedRequest<{ slotId: string }>, res: Response): Promise<void> {
     const actor: User = getUser(req);
-    const slotId: string = Array.isArray(req.params.slotId) ? req.params.slotId[0] : req.params.slotId;
+    const slotId: string = req.params.slotId;
     await slotsService.deleteSlot(actor, slotId);
     res.status(204).send();
+  },
+  async patchSlot(req: AuthenticatedRequest<{ slotId: string }>, res: Response): Promise<void> {
+    const actor: User = getUser(req);
+    const slotId: string = req.params.slotId;
+    const body: PatchSlotDto = req.body;
+    const slot: SlotDto = await slotsService.patchSlot(actor, slotId, body);
+    res.status(200).json({ slot });
+  },
+  async getContractorSlots(req: AuthenticatedRequest, res: Response): Promise<void> {
+    const user: User = getUser(req);
+    const slots: SlotDto[] = await slotsService.getContractorSlots(user.id);
+    res.status(200).json({ slots });
   },
 };
